...
    <string name="check_password_repeat_charater_a_little_two_times">password must have repeat character a little 2 times</string>
    <string name="check_password_length">password must have length more than 7 char</string>
    <string name="check_password_at_least_special_or_number">password must have at least special or number</string>
    <string name="check_password_different_username">password must have different username</string>
    <string name="tv_canvas_km">km</string>
    <string name="login_success">Login success</string>
    <string name="notification">Notification</string>
    <string name="usb">USB</string>
    <string name="ac">AC</string>
    <string name="wireless">WIRELESS</string>
    <string name="not_plugin">NOT PLUGIN</string>
    <string name="percent">%</string>
    <string name="cold">Cold</string>
...
