<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.ui.unittest.LoginActivity">

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_username" />

    <EditText
        android:id="@+id/edtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLoginUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_test_login" />
</LinearLayout>
